[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/button.png" type="Texture" id=1]
[ext_resource path="res://scripts/enviroment/button.gd" type="Script" id=2]
[ext_resource path="res://other/color_swap.tres" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Area2D" type="Area2D"]
collision_layer = 128
collision_mask = 20
monitorable = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Button" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
